<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_name">Main</string>

    <string name="app_name">Location Example</string>
    <string name="action_settings">Settings</string>
    <string name="apiStatusKey">API Status:</string>
    <string name="Header">Google Location Testing</string>
    <string name="locationKey">Location:</string>
    <string name="distanceHomeKey">Distance home:</string>
    <string name="locCounterKey">Loc counter:</string>
    <string name="restartUpdates">Restart Updates</string>
    <string name="directionsHome">Directions Home</string>
    <string name="map">Map</string>

</resources>
